# sladak

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-web.txt  requirements.txt
sladak/: __init__.py  ai_detect.py  cli.py  compare.py  crosscheck.py  filters.py  report.py  webapp.py
sladak/templates/: upload.html
tests/: test_ai_detect.py  test_compare.py  test_corpus.py  test_crosscheck.py  test_filters.py  test_report.py  test_shingle.py  test_webapp.py
turnitin_diy/: __init__.py  ai_detect.py  cli.py  compare.py  corpus.py  crosscheck.py  extract.py  report.py  shingle.py  webapp.py  websearch.py
turnitin_diy/templates/: upload.html
