[project]
name = "turnitin-diy"
version = "0.1.0"
description = "A local, open-source text-similarity checker using the same fingerprinting technique Turnitin is built on."
requires-python = ">=3.9"
dependencies = [
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
turnitin-diy = "turnitin_diy.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["turnitin_diy*"]
