[project]
name = "sladak"
version = "0.5.0"
description = "A local, open-source text-similarity checker using the same fingerprinting technique Turnitin is built on."
requires-python = ">=3.9"
dependencies = [
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
web = ["flask>=3.0.0", "flask-limiter>=3.5.0"]

[project.scripts]
sladak = "sladak.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sladak*"]

[tool.setuptools.package-data]
sladak = ["templates/*.html"]
